# PyOpenSet

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: main.yml
examples/: cache.py  data.py  distances.py  distributions-dataframe.py  distributions.py  runner.py  test_IRWdepth.py
openset/data/: __init__.py  generator.py  simulated.py
openset/experiments/: __init__.py  base.py  correlations.py  distributions.py  overlapping.py  properties.py  variances.py
openset/models/: IRWdepth.py  __init__.py  abof.py  base.py  correlation.py  cosine.py  euclidean.py  irwd.py  knn.py  lof.py  mahalanobis.py  manhattan.py  minkowski.py  minmax.py  mmw.py  seuclidean.py
openset/tests/: doctests.py
openset/tests/data/: test_generator.py
openset/tests/experiments/: test_base.py  test_correlations.py  test_distributions.py  test_overlapping.py  test_properties.py  test_variances.py
openset/tests/models/: test_abof.py  test_base.py  test_correlation.py  test_cosine.py  test_euclidean.py  test_irwd.py  test_knn.py  test_lof.py  test_mahalanobis.py  test_manhattan.py  test_minkowski.py  test_minmax.py  test_mmw.py  test_seuclidean.py
openset/tests/utils/: test_cache.py  test_runner.py  test_stats.py
openset/utils/: __init__.py  cache.py  runner.py  stats.py
