[metadata]
name = PyOpenSet
description_file = README.md
home_page = https://github.com/sdatko/PyOpenSet
author = Szymon Datko
author_email = szymon.datko@pwr.edu.pl
maintainer = Szymon Datko
maintainer_email = szymon.datko@pwr.edu.pl
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries :: Python Modules

[files]
packages =
    openset

[egg_info]
egg_base = .

[bdist_wheel]
universal = 1

[pbr]
warnerrors = true
